outputs_20260327-100811-604a7749/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_wffbfk1g\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_wffbfk1g\src\egtm_atom_3_phase_inverter_pwm.c:45:39: error: 'IfxEgtm_ATOM0_0N_TOUT81_P14_1_OUT' undeclared (first use in this function); did you mean 'IfxEgtm_ATOM0_0N_TOUT1_P02_1_OUT'?
   45 | #define PHASE_W_LS                   &IfxEgtm_ATOM0_0N_TOUT81_P14_1_OUT
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_wffbfk1g\src\egtm_atom_3_phase_inverter_pwm.c:111:40: note: in expansion of macro 'PHASE_W_LS'
  111 |     output[2].complementaryPin       = PHASE_W_LS;
      |                                        ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_wffbfk1g\src\egtm_atom_3_phase_inverter_pwm.c:45:39: note: each undeclared identifier is reported only once for each function it appears in
   45 | #define PHASE_W_LS                   &IfxEgtm_ATOM0_0N_TOUT81_P14_1_OUT
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_wffbfk1g\src\egtm_atom_3_phase_inverter_pwm.c:111:40: note: in expansion of macro 'PHASE_W_LS'
  111 |     output[2].complementaryPin       = PHASE_W_LS;
      |                                        ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_wffbfk1g\src\egtm_atom_3_phase_inverter_pwm.c:171:11: error: 'IfxEgtm_Pwm_Config' has no member named 'syncUpdate'
  171 |     config.syncUpdate                = TRUE;                               /* synchronized buffered updates */
      |           ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_wffbfk1g\src\egtm_atom_3_phase_inverter_pwm.c:188:87: error: 'IFXEGTM_CMU_CLKEN_CLK0' undeclared (first use in this function); did you mean 'IFXEGTM_CMU_CLKEN_ECLK0'?
  188 |             IfxEgtm_Cmu_enableClocks(&MODULE_EGTM, (uint32)(IFXEGTM_CMU_CLKEN_FXCLK | IFXEGTM_CMU_CLKEN_CLK0));
      |                                                                                       ^~~~~~~~~~~~~~~~~~~~~~
      |                                                                                       IFXEGTM_CMU_CLKEN_ECLK0
